--- a/guide-repair.html
+++ b/guide-repair.html
@@ -138,7 +138,7 @@
         import * as THREE from 'three';
         import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
 
-        const HELGA_PREFIX = "H.E.L.G.A.🤖: ";
+        const HELGA_PREFIX = "H.E.L.G.A.🎭: ";
         let scene, camera, renderer, controls, axesScene, axesCamera, infoBox, raycaster, mouse;
         let typingInterval;
         let currentModelJson, currentDamageJson, currentHistoryJson;
