--- a/guide-repair.html
+++ b/guide-repair.html
@@ -394,19 +394,19 @@
             });
         }
 
-        function viewGraph() {
+function viewGraph() {
             if (!currentHistoryJson || !currentHistoryJson.steps || currentHistoryJson.steps.length === 0) {
                 updateHELGA("Load a repair plan to see its graph.");
                 return;
             }
 
             const objectId = (currentModelJson?.objectName || 'object').replace(/\s+/g, '_');
-            const steps = currentHistoryJson.steps; // CORRECTED VARIABLE
+            const steps = currentHistoryJson.steps; // THIS IS THE ONLY LINE THAT NEEDED TO BE CHANGED
             const currentStepNumber = steps[currentStepIndex]?.step_number;
 
             const removeKeywords = ['remove', 'unscrew', 'detach', 'disassemble', 'pry', 'take off', 'unclip', 'sand', 'cut', 'unfasten', 'separate', 'take out', 'disconnect'];
             const addKeywords = ['add', 'apply', 'install', 'attach', 'secure', 'clamp', 'glue', 'insert', 'place', 'reassemble', 'fill', 'coat'];
-
+            
             let dot = `digraph RepairPlan {\n  rankdir=LR;\n  node [fontname="Helvetica,Arial,sans-serif", fixedsize=true, width=1.6, height=1.2];\n  edge [fontname="Helvetica,Arial,sans-serif"];\n\n`;
 
             steps.forEach(step => {
@@ -426,13 +426,13 @@
                 attributes.push(`shape=${shape}`);
                 
                 if (step.completed) {
-                    attributes.push(`fillcolor="${doneColor}"`);
+                    attributes.push(`fillcolor="#198754"`);
                     attributes.push('fontcolor=white');
                 } else if (step.step_number === currentStepNumber) {
-                    attributes.push(`fillcolor="${currentColor}"`);
+                    attributes.push(`fillcolor="#dd3333"`);
                     attributes.push('fontcolor=white');
                 } else {
-                    attributes.push(`fillcolor="${defaultNodeColor}"`);
+                    attributes.push(`fillcolor="black"`);
                     attributes.push('fontcolor=white');
                 }
 
