--- a/generate-assembly_rotated.html
+++ b/generate-assembly_rotated.html
@@ -139,7 +139,8 @@
             scene.add(objectGroup);
 
             camera = new THREE.PerspectiveCamera(50, viewerContainer.clientWidth / viewerContainer.clientHeight, 0.01, 1000);
-            camera.position.set(-1.0, 0.9, -1.2);
+            camera.up.set(0, 0, 1);
+            camera.position.set(1.0, -1.0, 1.0);
 
             renderer = new THREE.WebGLRenderer({ canvas: viewerCanvas, antialias: true, alpha: true });
             renderer.autoClear = false;
@@ -148,7 +149,7 @@
 
             controls = new OrbitControls(camera, renderer.domElement);
             controls.enableDamping = true;
-            controls.target.set(0, 0.4, 0);
+            controls.target.set(0, 0, 0);
 
             scene.add(new THREE.AmbientLight(0xffffff, 0.8), new THREE.DirectionalLight(0xffffff, 0.7, 3));
             
@@ -156,7 +157,7 @@
             const gizmoSize = 2.5;
             axesCamera = new THREE.OrthographicCamera(-gizmoSize, gizmoSize, gizmoSize, -gizmoSize, -10, 10);
             const axes = new THREE.AxesHelper(1.5);
-            // axes.rotation.x = -Math.PI / 2;
+            axes.rotation.x = -Math.PI / 2; // Rotate gizmo to make Z-axis point up
             axesScene.add(axes);
             
             infoBox = document.getElementById('info-box');
