--- a/generate-assembly_rotated.html
+++ b/generate-assembly_rotated.html
@@ -139,8 +139,8 @@
             scene.add(objectGroup);
 
             camera = new THREE.PerspectiveCamera(50, viewerContainer.clientWidth / viewerContainer.clientHeight, 0.01, 1000);
-            camera.up.set(0, 0, 1);
-            camera.position.set(1.0, -1.0, 1.0);
+            // camera.up.set(0, 0, 1);
+            camera.position.set(1.0, 1.0, 1.0);
 
             renderer = new THREE.WebGLRenderer({ canvas: viewerCanvas, antialias: true, alpha: true });
             renderer.autoClear = false;
