--- a/generate-assembly_new.html
+++ b/generate-assembly_new.html
@@ -55,7 +55,7 @@
         #graph-container svg { width: 100%; height: 100%; }
         #graph-title { margin-top: 45px; }
         
-        #settings-btn { flex-grow: 0; padding: 0 12px; }
+        #settings-btn { flex-grow: 0; padding: 0 12px; font-size: 18px; }
         .settings-group { margin-bottom: 20px; }
         .settings-group label { display: block; font-size: 14px; margin-bottom: 8px; }
         .settings-input { width: 100%; padding: 10px; border: 1px solid #000; border-radius: 0; font-size: 14px; box-sizing: border-box; }
@@ -67,11 +67,7 @@
         <div id="top-header">
             <div class="top-input-row">
                 <input type="text" id="object-name" placeholder="Enter object name...">
-                <button id="settings-btn" class="btn icon-button" title="Settings">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" viewBox="0 0 16 16">
-                        <path d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311a1.464 1.464 0 0 1-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c-1.4-.413-1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872l-.1-.34zM8 10.93a2.929 2.929 0 1 1 0-5.86 2.929 2.929 0 0 1 0 5.858z"/>
-                    </svg>
-                </button>
+                <button id="settings-btn" class="btn icon-button" title="Settings">⚙️</button>
             </div>
         </div>
 
@@ -114,16 +110,16 @@
         <div class="modal-content">
             <h3>Settings</h3>
             <div class="settings-group">
-                <label for="model-select">Model Quality (Slower is better)</label>
+                <label for="model-select">Select AI Model</label>
                 <select id="model-select" class="settings-input">
-                    <option value="gemini-1.5-flash-latest">Fast (Flash)</option>
-                    <option value="gemini-1.5-pro-latest">Balanced (Pro 1.5)</option>
-                    <option value="gemini-2.5-pro" selected>Highest Quality (Pro 2.5)</option>
+                    <option value="gemini-2.5-flash-lite">Fast</option>
+                    <option value="gemini-2.5-flash">Balanced</option>
+                    <option value="gemini-2.5-pro" selected>Accurate</option>
                 </select>
             </div>
             <div class="settings-group">
-                <label for="temperature-slider">Creativity (Temperature): <span id="temperature-value">0.4</span></label>
-                <input type="range" id="temperature-slider" class="settings-input" min="0" max="1" step="0.1" value="0.4">
+                <label for="temperature-slider">Creativity (Temperature): <span id="temperature-value">0.5</span></label>
+                <input type="range" id="temperature-slider" class="settings-input" min="0" max="1" step="0.1" value="0.5">
             </div>
             <div class="modal-actions">
                 <button id="save-settings-btn" class="btn modal-btn">Save</button>
@@ -159,7 +155,7 @@
         const objectGroup = new THREE.Group();
         const partMeshesMap = new Map();
         let activeAnimations = [];
-        let temperature = 0.4;
+        let temperature = 0.5;
         let geminiModel = 'gemini-2.5-pro';
 
         // --- DOM ELEMENTS ---
