--- a/generate-assembly_new.html
+++ b/generate-assembly_new.html
@@ -51,11 +51,11 @@
 
         #json-view-modal-overlay .modal-content textarea { width: 100%; height: 40vh; resize: none; font-family: monospace; font-size: 12px; margin-bottom: 10px; border-radius: 0; }
         #graph-modal-overlay .modal-content { max-width: 90vw; height: 80vh; }
-        #graph-container { width: 100%; height: calc(100% - 40px); }
+        #graph-container { width: 100%; flex-grow: 1; min-height: 0; }
         #graph-container svg { width: 100%; height: 100%; }
         #graph-title { margin-top: 45px; }
         
-        #settings-btn { flex-grow: 0; padding: 0 12px; font-size: 18px; }
+        #settings-btn { flex-grow: 0; padding: 12px; font-size: 22px; }
         .settings-group { margin-bottom: 20px; }
         .settings-group label { display: block; font-size: 14px; margin-bottom: 8px; }
         .settings-input { width: 100%; padding: 10px; border: 1px solid #000; border-radius: 0; font-size: 14px; box-sizing: border-box; }
@@ -67,7 +67,7 @@
         <div id="top-header">
             <div class="top-input-row">
                 <input type="text" id="object-name" placeholder="Enter object name...">
-                <button id="settings-btn" class="btn icon-button" title="Settings">⚙️</button>
+                <button id="settings-btn" class="btn icon-button" title="Settings"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1,5" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="3"></circle><path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"></path></svg></button>
             </div>
         </div>
 
