--- a/catalog-damages_new.html
+++ b/catalog-damages_new.html
@@ -369,12 +369,50 @@
 
             currentDamageJson = jsonData;
             const dotGeometry = new THREE.SphereGeometry(SPHERE_BASE_RADIUS, 16, 16);
+
             jsonData.forEach(damage => {
                 const sphere = new THREE.Mesh(dotGeometry, defaultDotMaterial.clone());
-                sphere.position.set(damage.coordinates.x, damage.coordinates.y, damage.coordinates.z);
-                sphere.userData.damage = damage;
-                damageSpheres.push(sphere);
-                scene.add(sphere);
+                let finalPosition = null;
+
+                // Path 1: New, precise method using local coordinates
+                if (damage.local_coordinates && damage.part_id) {
+                    const partData = currentModelJson.parts.find(p => p.id === damage.part_id);
+                    if (partData) {
+                        const origin = new THREE.Vector3(partData.origin.x, partData.origin.y, partData.origin.z);
+                        const offset = new THREE.Vector3(damage.local_coordinates.x, damage.local_coordinates.y, damage.local_coordinates.z);
+                        
+                        // Create an Euler rotation from the part's data
+                        // The 'YXZ' order must match the order used when creating the part in createModel()
+                        const euler = new THREE.Euler(
+                            partData.rotation?.x || 0,
+                            partData.rotation?.y || 0,
+                            partData.rotation?.z || 0,
+                            'YXZ' 
+                        );
+
+                        // Apply the part's rotation to the local offset vector
+                        offset.applyEuler(euler);
+
+                        // Add the rotated offset to the part's origin to get the final world position
+                        finalPosition = new THREE.Vector3().addVectors(origin, offset);
+                        
+                        // Store the calculated world coordinates back into the object for consistency
+                        damage.coordinates = { x: finalPosition.x, y: finalPosition.y, z: finalPosition.z };
+
+                    } else {
+                        console.warn(`Could not find part with id "${damage.part_id}" for damage "${damage.id}".`);
+                    }
+                // Path 2: Backward compatibility for old JSON files that already have world coordinates
+                } else if (damage.coordinates) {
+                    finalPosition = new THREE.Vector3(damage.coordinates.x, damage.coordinates.y, damage.coordinates.z);
+                }
+
+                if (finalPosition) {
+                    sphere.position.copy(finalPosition);
+                    sphere.userData.damage = damage;
+                    damageSpheres.push(sphere);
+                    scene.add(sphere);
+                }
             });
             resetMaterials(); 
         }
