--- a/catalog-damages_new.html
+++ b/catalog-damages_new.html
@@ -233,12 +233,12 @@
         }
 
         function loadDefaults() {
-            const defaultModel = {"objectName": "Default Cube","parts": [{"id": "cube","status": "defective","origin": { "x": 0, "y": 0, "z": 0 },"dimensions": { "width": 0.5, "depth": 0.5, "height": 0.5 },"connections": []}]};
+            const defaultModel = {"objectName": "","parts": [{"id": "cube","status": "defective","origin": { "x": 0, "y": 0, "z": 0 },"dimensions": { "width": 0.5, "depth": 0.5, "height": 0.5 },"connections": []}]};
             const defaultDamage = [{"id": "damage_01","type": "Scratch","description": "A default scratch.","part_id": "cube","coordinates": { "x": 0.0, "y": 0.25, "z": 0.0 }}];
             createModel(defaultModel);
             createDamages(defaultDamage);
             objectNameInput.value = "";
-            updateMIA("Hello! I am M.I.A. - the Mapping & Inspection Agent. Upload an assembly and damage file, or add photos to begin.");
+            updateMIA("Hello! I am M.A.G.D.A. - the Mapping Agent for General Damages. Upload an assembly and damage file, or add photos to begin.");
         }
 
         function animate() {
