--- a/catalog-damages_new.html
+++ b/catalog-damages_new.html
@@ -371,41 +371,42 @@
             const dotGeometry = new THREE.SphereGeometry(SPHERE_BASE_RADIUS, 16, 16);
 
             jsonData.forEach(damage => {
-                // Ensure we have the necessary data to proceed
                 if (!damage.coordinates || !damage.part_id) return;
 
                 const partData = currentModelJson.parts.find(p => p.id === damage.part_id);
                 if (!partData) {
                     console.warn(`Could not find part with id "${damage.part_id}" for damage "${damage.id}".`);
-                    return; // Skip this damage marker if its part doesn't exist
+                    return;
                 }
 
-                // --- Start of Robust Coordinate Calculation ---
+                // --- The Correct Matrix Transformation Logic ---
 
-                // 1. Define the part's center (origin) and the AI's naive coordinate.
+                // 1. Define vectors for the part's origin and the AI's naive damage coordinate.
                 const origin = new THREE.Vector3(partData.origin.x, partData.origin.y, partData.origin.z);
                 const naiveCoord = new THREE.Vector3(damage.coordinates.x, damage.coordinates.y, damage.coordinates.z);
 
-                // 2. Calculate the offset vector from the part's center to the naive coordinate.
-                // This represents the damage's position relative to the part's center in an un-rotated state.
-                const offset = new THREE.Vector3().subVectors(naiveCoord, origin);
-                
-                // 3. Create an Euler rotation object from the part's data.
-                // The 'YXZ' order must match the order used when creating the part in createModel().
+                // 2. Calculate the local offset. This is the damage's position relative to the part's center, in the part's own un-rotated space.
+                const localOffset = new THREE.Vector3().subVectors(naiveCoord, origin);
+
+                // 3. Create a rotation object (Quaternion is best for this) from the part's Euler angles.
                 const euler = new THREE.Euler(
                     partData.rotation?.x || 0,
                     partData.rotation?.y || 0,
                     partData.rotation?.z || 0,
-                    'YXZ' 
+                    'YXZ'
                 );
+                const quaternion = new THREE.Quaternion().setFromEuler(euler);
 
-                // 4. Apply the part's rotation to the offset vector. This is the key step.
-                offset.applyEuler(euler);
+                // 4. Create the part's complete transformation matrix.
+                // This matrix knows how to take any point in the part's local space and move it to the correct world space position and rotation.
+                const partMatrix = new THREE.Matrix4();
+                partMatrix.compose(origin, quaternion, new THREE.Vector3(1, 1, 1)); // (position, rotation, scale)
 
-                // 5. Add the now-rotated offset back to the part's origin to get the final, correct world position.
-                const finalPosition = new THREE.Vector3().addVectors(origin, offset);
+                // 5. Apply the part's transformation matrix to the local offset vector.
+                // This transforms the local damage point into the final, correct world space coordinate.
+                const finalPosition = localOffset.clone().applyMatrix4(partMatrix);
                 
-                // --- End of Robust Coordinate Calculation ---
+                // --- End of Logic ---
 
                 const sphere = new THREE.Mesh(dotGeometry, defaultDotMaterial.clone());
                 sphere.position.copy(finalPosition);
@@ -413,7 +414,7 @@
                 damageSpheres.push(sphere);
                 scene.add(sphere);
             });
-            resetMaterials(); 
+            resetMaterials();
         }
 
         function updateMIA(message, isTyping = false) {
