--- a/catalog-damages_new.html
+++ b/catalog-damages_new.html
@@ -16,7 +16,7 @@ body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helve
     #viewer-canvas { display: block; width: 100%; height: 100%; }
     #info-box { position: absolute; top: 10px; left: 0px; padding: 0px; background-color: transparent; border: none; font-family: monospace; font-size: 12px; line-height: 1.4; z-index: 101; display: none; pointer-events: none; max-width: 250px; }
 
-    #bottom-ui-container { display: flex; flex-direction: column; gap: 15px; }
+    #bottom-ui-container { display: flex; flex-direction: column; gap: 12px; }
     .icon-controls { display: flex; justify-content: space-around; text-align: center; padding: 10px 0; }
     .icon-button { cursor: pointer; color: #000; }
     .icon-button svg { width: 18px; height: 18px; }
@@ -195,10 +195,10 @@ body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helve
     const saveSettingsBtn = document.getElementById('save-settings-btn');
     
     // --- MATERIALS ---
-    const intactPartMaterial = new THREE.MeshStandardMaterial({ color: 0x666666, transparent: true, opacity: 0.4 });
-    const defectivePartMaterial = new THREE.MeshStandardMaterial({ color: 0xff4444, transparent: true, opacity: 0.5 });
-    const missingPartMaterial = new THREE.MeshStandardMaterial({ color: 0, transparent: true, opacity: 0, visible: false }); // Missing parts are invisible
-    const selectionPartMaterial = new THREE.MeshStandardMaterial({ color: 0x0000ff, transparent: true, opacity: 0.9 });
+    const intactPartMaterial = new THREE.MeshStandardMaterial({ color: 0x666666, transparent: true, opacity: 0.4, side: THREE.DoubleSide });
+    const defectivePartMaterial = new THREE.MeshStandardMaterial({ color: 0xff0000, transparent: true, opacity: 0.4, side: THREE.DoubleSide });
+    const missingPartMaterial = new THREE.MeshStandardMaterial({ color: 0xffff00, transparent: true, opacity: 0.4, side: THREE.DoubleSide });
+    const selectionPartMaterial = new THREE.MeshStandardMaterial({ color: 0x0000ff, transparent: true, opacity: 0.8, side: THREE.DoubleSide });
     const outlineMaterial = new THREE.LineBasicMaterial({ color: 0x000000, transparent: true, opacity: 0.8 });
     const defaultDotMaterial = new THREE.MeshBasicMaterial({ color: 0xff0000 });
     const selectedDotMaterial = new THREE.MeshBasicMaterial({ color: 0x6f0000 });
