--- a/generate-assembly_new.html
+++ b/generate-assembly_new.html
@@ -8,7 +8,7 @@
     <style>
         body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; margin: 0; background-color: #fff; color: #000; display: flex; justify-content: center; padding: 20px 0; }
 
-        #app-wrapper { width: 90%; max-width: 420px; display: flex; flex-direction: column; gap: 20px; }
+        #app-wrapper { width: 90%; max-width: 520px; display: flex; flex-direction: column; gap: 20px; }
         #top-header { display: flex; flex-direction: column; gap: 20px; }
         .top-input-row { display: flex; align-items: stretch; gap: 10px; }
         #object-name { flex-grow: 1; background-color: #fff; padding: 12px; border: 1px solid #000; border-radius: 0; font-size: 14px; box-sizing: border-box; }
@@ -17,7 +17,7 @@
         #viewer-canvas { display: block; width: 100%; height: 100%; }
         #info-box { position: absolute; top: 10px; left: 0px; padding: 0px; background-color: transparent; border: none; font-family: monospace; font-size: 12px; line-height: 1.4; z-index: 101; display: none; pointer-events: none; max-width: 250px; }
 
-        #bottom-ui-container { display: flex; flex-direction: column; gap: 15px; }
+        #bottom-ui-container { display: flex; flex-direction: column; gap: 12px; }
         .icon-controls { display: flex; justify-content: space-around; text-align: center; padding: 10px 0; }
         .icon-button { cursor: pointer; color: #000; }
         .icon-button svg { width: 18px; height: 18px; }
@@ -187,8 +187,8 @@
         const allowRotationsCheckbox = document.getElementById('allow-rotations-checkbox');
 
         // --- MATERIALS ---
-        const defaultPartMaterial = new THREE.MeshStandardMaterial({ color: 0x666666, transparent: true, opacity: 0.4 });
-        const selectionPartMaterial = new THREE.MeshStandardMaterial({ color: 0x0000ff, transparent: true, opacity: 0.9 });
+        const defaultPartMaterial = new THREE.MeshStandardMaterial({ color: 0x666666, transparent: true, opacity: 0.3, side: THREE.DoubleSide });
+        const selectionPartMaterial = new THREE.MeshStandardMaterial({ color: 0x0000ff, transparent: true, opacity: 0.7, side: THREE.DoubleSide });
         const outlineMaterial = new THREE.LineBasicMaterial({ color: 0x000000, transparent: true, opacity: 0.8 });
 
         // --- CORE 3D & UI FUNCTIONS ---
