--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
 
         <nav>
             <ul class="workflow-nav">
-                <li><a href="generate-assembly.html" target="_blank" rel="noopener noreferrer"><span>🧱</span> Generate Assembly</a></li>
-                <li><a href="catalog-damages.html" target="_blank" rel="noopener noreferrer"><span>📍</span> Catalog Damages</a></li>
+                <li><a href="generate-assembly_new.html" target="_blank" rel="noopener noreferrer"><span>🧱</span> Generate Assembly</a></li>
+                <li><a href="catalog-damages_new.html" target="_blank" rel="noopener noreferrer"><span>📍</span> Catalog Damages</a></li>
                 <li><a href="plan-actions.html" target="_blank" rel="noopener noreferrer"><span>📝</span> Plan Actions</a></li>
                 <li><a href="guide-repair.html" target="_blank" rel="noopener noreferrer"><span>🛠️</span> Guide Repair</a></li>
                 <li><a href="view-history.html" target="_blank" rel="noopener noreferrer"><span>📂</span> View History</a></li>
