--- a/generate-assembly_new.html
+++ b/generate-assembly_new.html
@@ -68,7 +68,7 @@
     <div id="app-wrapper">
         <div id="top-header">
             <div class="top-input-row">
-                <input type="text" id="object-name" placeholder="Enter object name...">
+                <input type="text" id="object-name" placeholder="Enter object name... (optional)">
                 <button id="settings-btn" class="btn icon-button" title="Settings">
                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                         <circle cx="12" cy="12" r="3"></circle>
